[gd_scene load_steps=11 format=2]

[ext_resource path="res://SnakeWorld.gd" type="Script" id=1]
[ext_resource path="res://snake_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Titania.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://restart.png" type="Texture" id=4]
[ext_resource path="res://passed.png" type="Texture" id=5]
[ext_resource path="res://failed.png" type="Texture" id=6]
[ext_resource path="res://audiomass-output.mp3" type="AudioStream" id=7]
[ext_resource path="res://mixkit-retro-game-notification-212.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[node name="SnakeWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
format = 1
tile_data = PoolIntArray( 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 65536, 2, 0, 65555, 2, 0, 131072, 2, 0, 131091, 2, 0, 196608, 2, 0, 196627, 2, 0, 262144, 2, 0, 262163, 2, 0, 327680, 2, 0, 327699, 2, 0, 393216, 2, 0, 393235, 2, 0, 458752, 2, 0, 458771, 2, 0, 524288, 2, 0, 524307, 2, 0, 589824, 2, 0, 589843, 2, 0, 655360, 2, 0, 655379, 2, 0, 720896, 2, 0, 720897, 2, 0, 720898, 2, 0, 720899, 2, 0, 720900, 2, 0, 720901, 2, 0, 720902, 2, 0, 720903, 2, 0, 720904, 2, 0, 720905, 2, 0, 720906, 2, 0, 720907, 2, 0, 720908, 2, 0, 720909, 2, 0, 720910, 2, 0, 720911, 2, 0, 720912, 2, 0, 720913, 2, 0, 720914, 2, 0, 720915, 2, 0 )

[node name="GameOver" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 21.0
margin_top = -96.0
margin_right = 1021.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 1 )
text = "Game Over!
Press Enter or Retry button to restart..."
align = 1
valign = 1

[node name="StartGame" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1000.0
margin_bottom = 600.0
custom_fonts/font = SubResource( 1 )
text = "Press any arrow key on keyboard or monitor  to start the game!


"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 40.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "SCORE:"

[node name="Score" type="Label" parent="."]
margin_left = 110.0
margin_top = 10.0
margin_right = 200.0
margin_bottom = 40.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "0"

[node name="Passed" type="Sprite" parent="."]
position = Vector2( 518, 438 )
texture = ExtResource( 5 )

[node name="Failed" type="Sprite" parent="."]
visible = false
position = Vector2( 526, 436 )
scale = Vector2( 0.432653, 0.381526 )
texture = ExtResource( 6 )

[node name="stillalive" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="du" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Restart" type="TextureButton" parent="."]
visible = false
margin_left = 401.0
margin_top = 214.0
margin_right = 911.0
margin_bottom = 484.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
